# async-ai-project

./: README.md  pyproject.toml
app/: main.py
static/: index.html
